수정이 좀 이상하게 됨. 5번에서 6번으로 넘어가다가 이상한거 건들임. 수정하기